Updated images to the media folder, updated image filepath on templates and also fixed issue with image distorting on small screen.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -176,10 +176,10 @@ margin-top: -20px;
 }
 
 .item-image img{
-    min-height: 320px;
+    /* min-height: 320px; */
     height: 100%;
     width: 100%;
-    /* object-fit: cover; */
+    object-fit: cover;
 }
 
 /*-----item-info page ---*/
